update typos in README and Release note

--- a/_releases/1.0.0-beta.md
+++ b/_releases/1.0.0-beta.md
@@ -1,6 +1,6 @@
 # V1.0.0-beta-b release notes
 
-Version 1.0.0-beta-b
+Version 1.0.0-beta
 
 * Launching date: 2020-04-24
 * [Downloads](https://github.com/wet-boew/cdts-sgdc-cdn/releases/tag/1.0.0-beta-b)
@@ -14,7 +14,7 @@ Version 1.0.0-beta-b
 
 ### Number of commits: 17
 
-* Shawn Thompson [@shawnthompgon](https://github.com/shawnthompson/): 17 commits
+* Shawn Thompson [@shawnthompson](https://github.com/shawnthompson/): 17 commits
 
 ### List of commits
 <ul>
